# TodoApp

./: .gitignore  README.md
api/: Cargo.toml
api/request/: todo.http  user.http
api/src/: main.rs
api/src/config/: config_env.rs  database.rs  mod.rs
api/src/handlers/: mod.rs  site_handler.rs  todo_handler.rs  user_handler.rs
api/src/helpers/: mod.rs  string.rs
api/src/models/: form.rs  json_data.rs  jwToken.rs  mod.rs  todo.rs  user.rs
api/src/routes/: mod.rs  site_route.rs  todo_route.rs  user_route.rs
api/src/services/: mod.rs  todo_service.rs  user_service.rs
api/src/utils/: custom_error.rs  date_format.rs  login.rs  mod.rs  upload_file.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  App.module.scss  index.js
ui/src/Contexts/: ThemeContext.js
ui/src/Layouts/DefaultLayout/: DefaultLayout.js  DefaultLayout.module.scss
ui/src/assets/images/: index.js
ui/src/components/Background/: Background.js  Background.module.scss
ui/src/components/Button/: Button.js  Button.module.scss
ui/src/components/Footer/: Footer.js  Footer.module.scss
ui/src/components/FormAddTodo/: FormAddTodo.js  FormAddTodo.module.scss  index.js
ui/src/components/FormLogin/: FormLogin.js  (+1 more)
ui/src/config/: routes.js
ui/src/constants/: constants.js
ui/src/hooks/: useAddTodo.js  useFormInput.js  useLoadProfile.js  useLoadTodos.js  useLogin.js  useProfile.js  useRegister.js
ui/src/routes/: routes.js
ui/src/store/: Provider.js  actions.js  hooks.js  index.js  reducer.js
ui/src/utils/: httpRequest.js  index.js  util.js
(+49 files in other folders)
