[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-multipart = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
bcrypt = "0.15"
jsonwebtoken = "9"
[profile.dev.package.sqlx-macros]
opt-level = 3
